--- a/src/index.html
+++ b/src/index.html
@@ -48,14 +48,9 @@
     <br> MMB/Q: pick
     <br> RMB/R: place
     <br> scroll: zoom
-    <br> 1: launch entity
-    <br> 3: toggle timescale
-    <br> P: pause
-    <br> I: invert mouse
-    <br> O: toggle world data
+    <br> 1-9: select inventory slot
   </div>
   <script type="module" src="./index.js"></script>
-
 </body>
 
 </html>
