--- a/src/index.html
+++ b/src/index.html
@@ -43,11 +43,10 @@
 <body>
   <div id="reticle">+</div>
   <div id="usage">
-    move: WASD
-    <br> LMB: break
-    <br> MMB/Q: pick
-    <br> RMB/R: place
-    <br> scroll: zoom
+    WASD to move
+    <br>Space to jump
+    <br>Left click to break blocks
+    <br>Right click to place blocks
     <br> 1-9: select inventory slot
   </div>
   <script type="module" src="./index.js"></script>
