--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,19 @@
         width: fit-content;
       }
     </style>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-E194TDLP54"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-E194TDLP54");
+    </script>
   </head>
 
   <body>
